yaml-files/mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
        # envFrom:
        #   - secretRef:
        #       name: mysql-secret
        #   - configMapRef:
        #       name: mysql-configmap
        resources: {}
        volumeMounts:
          - name: mysql-pv
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-pv
          persistentVolumeClaim:
            claimName: mysql-pv-claim
