yaml-files/resultserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resultserver-deploy
  name: resultserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver-deploy
  template:
    metadata:
      labels:
        app: resultserver-deploy
    spec:
      containers:
      - image: olivercw/resultserver
        name: resultserver
        ports: 
        - containerPort: 3000
        # envFrom:
        #   - secretRef:
        #       name: mysql-secret
        #   - configMapRef:
        #       name: server-configmap
        resources: {}
