yaml-files/resultserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resultserver-svc
  name: resultserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30002
  selector:
    app: resultserver-deploy #webser-deploy da satur 15 le aynı
  type: NodePort
