yaml-files/webserver-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver-svc
  name: webserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    app: webserver-deploy #webser-deploy da satur 15 le aynı
  type: NodePort
